[package]
name = "token_stream2"
version = "1.0.0"
edition = "2021"
authors = ["Realm of Uz"]
license = "Apache-2.0"
description = "A better TokenStream for procedural macros."
repository = "https://github.com/realmofuz/token_stream2"
keywords = ["macros", "syn"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.56"
documentation = "https://docs.rs/token_stream2/"

[dependencies]
proc-macro2 = "1.0.63"

[[example]]
path = "examples/simple.rs"
name = "simple"